Address feedback: Improve mobile behavior, fix flicker, remove unnecessary component, etc.

--- a/projects/packages/my-jetpack/_inc/components/product-cards-section/boost-card/style.scss
+++ b/projects/packages/my-jetpack/_inc/components/product-cards-section/boost-card/style.scss
@@ -8,6 +8,7 @@ $border_radius: math.div($bar-height, 2);
     line-height: $bar_height;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     column-gap: 1em;
     margin: 8px 0 8px;
     &--letter {
@@ -22,16 +23,27 @@ $border_radius: math.div($bar-height, 2);
             border-radius: var(--jp-border-radius);
             cursor: pointer;
             &:focus {
-                outline: 1px dotted #000;
+                outline: 1px dotted var( --jp-black );
             }
         }
     }
 }
 
 .boost-score-tooltip {
-    position: absolute;
-    top: 50%;
-    right: 0;
+    // position: absolute;
+    // top: 0;
+    // //right: 50%;
+    // right: 0;
+    // z-index: -10;
+    // width: 24px;
+    // height: 24px;
+    // pointer-events:none;
+    // @media (min-width: 783px) {
+    //     //top: 50%;
+    //     top: 0;
+    //     right: 0;
+    // }
+
     &__heading {
         font-size: var(--font-title-small);
         line-height: 30px;
@@ -44,13 +56,20 @@ $border_radius: math.div($bar-height, 2);
     }
 }
 
-.components-popover__content {
-    width: 100%;
+.components-popover {
+    width: calc(100% - 63px);
     max-width: 340px;
     min-height: 150px;
-    padding: 24px;
-    p:last-child {
-        margin-bottom: 0;
+
+    @media (min-width: 783px) {
+        width: 100%;
+    }
+    &__content {
+        width: 100%;
+        padding: 24px;
+        p:last-child {
+            margin-bottom: 0;
+        }
     }
 }
 
